--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -19,6 +19,22 @@
   }
 }
 
+@keyframes progress {
+  0% {
+    transform: translateX(-100%);
+  }
+  50% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.animate-progress {
+  animation: progress 1.5s ease-in-out infinite;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
